open-webui/open-webui-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/component: ai-interface
    app.kubernetes.io/managed-by: kubectl
spec:
  serviceName: open-webui
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: open-webui
      app.kubernetes.io/component: ai-interface
  template:
    metadata:
      labels:
        app.kubernetes.io/name: open-webui
        app.kubernetes.io/component: ai-interface
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /app/backend/data
              name: data
      volumes:
        - name: data
          nfs:
            path: /export/Kubernetes/open-webui
            server: 192.168.86.107
